@@ -1,3 +1,10 @@
+OCaml 4.00.1:
+-------------
+
+Bug fixes:
+- PR#5700: crash with native-code stack backtraces under MacOS 10.8 x86-64
+
+
 OCaml 4.00.0:
 -------------
 
